--- a/E tutorial/index.html
+++ b/E tutorial/index.html
@@ -34,7 +34,18 @@
 
         </ul>
     </nav>
-
+    <div>
+        <div class="about-me__info row">
+            <div class="about-me__info--container">
+                <figure class="about-me__picture--mask">
+                    <img src="./assets/me.jpeg" alt="Picture of me">
+                </figure>
+                <h1 class="about-me__info--title">
+                    Hey! I'm <span class="text--green">Melissa Biggs!</span>
+                </h1>
+            </div>
+        </div>
+    </div>
    </section>
 </body>
 </html>
