--- a/E tutorial/index.html
+++ b/E tutorial/index.html
@@ -34,15 +34,17 @@
 
         </ul>
     </nav>
-    <div>
+    <div class="flex flex-1">
         <div class="about-me__info row">
             <div class="about-me__info--container">
                 <figure class="about-me__picture--mask">
-                    <img src="./assets/me.jpeg" alt="Picture of me">
+                    <img src="./davidbr4gg.github.io-master/assets/38292.jpg" class="about-me__picture--mask" alt="Picture">
                 </figure>
                 <h1 class="about-me__info--title">
-                    Hey! I'm <span class="text--green">Melissa Biggs!</span>
+                    Welcome, I'm <span class="text--green">Melissa!</span>
                 </h1>
+                <p class="about-me__info--para">
+                    I'm a <strong class="text--green">frontend web developer</strong>. Through my studies,  I've built a strong foundation of skills such as CSS and JavaScript. When I'm not at the computer, you can find me outside with my dog, no matter the weather.</p>
             </div>
         </div>
     </div>
