--- a/E tutorial/index.html
+++ b/E tutorial/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css">
+    <script src="https://kit.fontawesome.com/b971776b2b.js" crossorigin="anonymous"></script>
 </head>
 <body>
    <section id="about-me">
@@ -44,7 +45,49 @@
                     Welcome, I'm <span class="text--green">Melissa!</span>
                 </h1>
                 <p class="about-me__info--para">
-                    I'm a <strong class="text--green">frontend web developer</strong>. Through my studies,  I've built a strong foundation of skills such as CSS and JavaScript. When I'm not at the computer, you can find me outside with my dog, no matter the weather.</p>
+                    I'm a <strong class="text--green">frontend web developer</strong>. Through my studies,  I've built a strong foundation of skills such as CSS and JavaScript. When I'm not at the computer, you can find me outside with my dog, no matter the weather.
+                </p>
+                <div class="about-me__links">
+                    <a href="" class="about-me__link">
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </a>
+                     <a href="" class="about-me__link">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                     <a href="" class="about-me__link">
+                        <i class="fa-regular fa-envelope"></i>
+                    </a>
+                     <a href="" class="about-me__link">
+                        <i class="fa-solid fa-file"></i>
+                    </a>
+                </div>
+            </div>
+            <figure class="about-me__img--container">
+                <img src="./davidbr4gg.github.io-master/assets/undraw_websites.svg" class="about-me__img" alt="">
+            </figure>    
+            </div>
+    </div>
+   </section>
+   <section id="Languages">
+    <div class="container">
+        <div class="row">
+            <h1 class="section__title">My Technology Stack</h1>
+            <div class="language__list">
+                <div class="language">
+                    <figure class="language__img--wrapper">
+                        <img src="./davidbr4gg.github.io-master/assets/html.png" alt="" class="language__img">
+                    </figure>
+                </div>
+                <div class="language">
+                    <figure class="language__img--wrapper">
+                        <img src="./davidbr4gg.github.io-master/assets/html.png" alt="" class="language__img">
+                    </figure>
+                </div>
+                <div class="language">
+                    <figure class="language__img--wrapper">
+                        <img src="./davidbr4gg.github.io-master/assets/html.png" alt="" class="language__img">
+                    </figure>
+                </div>
             </div>
         </div>
     </div>
