--- a/E tutorial/index.html
+++ b/E tutorial/index.html
@@ -71,24 +71,40 @@
    <section id="Languages">
     <div class="container">
         <div class="row">
-            <h1 class="section__title">My Technology Stack</h1>
+            <h1 class="section__title">My <span class="text--green">Technology Stack</span></h1>
             <div class="language__list">
                 <div class="language">
                     <figure class="language__img--wrapper">
                         <img src="./davidbr4gg.github.io-master/assets/html.png" alt="" class="language__img">
                     </figure>
+                    <span class="language__name">HTML</span>
                 </div>
                 <div class="language">
                     <figure class="language__img--wrapper">
                         <img src="./davidbr4gg.github.io-master/assets/html.png" alt="" class="language__img">
                     </figure>
+                    <span class="language__name">CSS</span>
                 </div>
                 <div class="language">
                     <figure class="language__img--wrapper">
                         <img src="./davidbr4gg.github.io-master/assets/html.png" alt="" class="language__img">
                     </figure>
+                    <span class="language__name">JavaScript</span>
+                </div>
+                <div class="language">
+                    <figure class="language__img--wrapper">
+                        <img src="./davidbr4gg.github.io-master/assets/html.png" alt="" class="language__img">
+                    </figure>
+                    <span class="language__name">React</span>
                 </div>
             </div>
+        </div>
+    </div>
+   </section>
+   <section id="projects">
+    <div class="container">
+        <div class="row">
+            <h1 class="section__title">Take a look at my <span class="text--green">projects</span> below</h1>
         </div>
     </div>
    </section>
