--- a/E tutorial/index.html
+++ b/E tutorial/index.html
@@ -101,10 +101,18 @@
         </div>
     </div>
    </section>
+
    <section id="projects">
     <div class="container">
         <div class="row">
             <h1 class="section__title">Take a look at my <span class="text--green">projects</span> below</h1>
+            <ul class="project__list">
+                <li class="project">
+                    <div class="project__wrapper">
+                        <img src="./davidbr4gg.github.io-master/assets/loopit.png" class="project__img" alt="NEED TO ADD OWN IMG"> 
+                    </div>
+                </li>
+            </ul>
         </div>
     </div>
    </section>
