--- a/E tutorial/index.html
+++ b/E tutorial/index.html
@@ -110,6 +110,67 @@
                 <li class="project">
                     <div class="project__wrapper">
                         <img src="./davidbr4gg.github.io-master/assets/loopit.png" class="project__img" alt="NEED TO ADD OWN IMG"> 
+                        <div class="project__description">
+                            <h3 class="project__description--title">Car sales project</h3>
+                            <h4 class="project__description--sub-title">
+                                Html, CSS, JavaScript, Vue, Vuex
+                            </h4>
+                            <p class="project__description--para">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo quam non est cursus imperdiet at ut purus. Morbi tristique turpis at enim rhoncus euismod. Sed consectetur, diam at fringilla pharetra, leo nisi pulvinar libero, at aliquam mauris lectus at tellus. Praesent maximus ut neque a aliquet. Integer scelerisque massa et arcu lobortis sollicitudin. Maecenas in mollis mi.
+                            </p>
+                            <div class="project__description--links">
+                                <a href="www.github.com/yourlink" target="_blank" class="project__description--link">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                                <a href="www.yourwebsite.com" class="project__description--link">
+                                    <i class="fab fa-link"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="project">
+                    <div class="project__wrapper">
+                        <img src="./davidbr4gg.github.io-master/assets/loopit.png" class="project__img" alt="NEED TO ADD OWN IMG"> 
+                        <div class="project__description">
+                            <h3 class="project__description--title">Car sales project</h3>
+                            <h4 class="project__description--sub-title">
+                                Html, CSS, JavaScript, Vue, Vuex
+                            </h4>
+                            <p class="project__description--para">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo quam non est cursus imperdiet at ut purus. Morbi tristique turpis at enim rhoncus euismod. Sed consectetur, diam at fringilla pharetra, leo nisi pulvinar libero, at aliquam mauris lectus at tellus. Praesent maximus ut neque a aliquet. Integer scelerisque massa et arcu lobortis sollicitudin. Maecenas in mollis mi.
+                            </p>
+                            <div class="project__description--links">
+                                <a href="www.github.com/yourlink" target="_blank" class="project__description--link">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                                <a href="www.yourwebsite.com" class="project__description--link">
+                                    <i class="fab fa-link"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="project">
+                    <div class="project__wrapper">
+                        <img src="./davidbr4gg.github.io-master/assets/loopit.png" class="project__img" alt="NEED TO ADD OWN IMG"> 
+                        <div class="project__description">
+                            <h3 class="project__description--title">Car sales project</h3>
+                            <h4 class="project__description--sub-title">
+                                Html, CSS, JavaScript, Vue, Vuex
+                            </h4>
+                            <p class="project__description--para">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo quam non est cursus imperdiet at ut purus. Morbi tristique turpis at enim rhoncus euismod. Sed consectetur, diam at fringilla pharetra, leo nisi pulvinar libero, at aliquam mauris lectus at tellus. Praesent maximus ut neque a aliquet. Integer scelerisque massa et arcu lobortis sollicitudin. Maecenas in mollis mi.
+                            </p>
+                            <div class="project__description--links">
+                                <a href="www.github.com/yourlink" target="_blank" class="project__description--link">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                                <a href="www.yourwebsite.com" class="project__description--link">
+                                    <i class="fab fa-link"></i>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </li>
             </ul>
