--- a/E tutorial/index.html
+++ b/E tutorial/index.html
@@ -119,10 +119,10 @@
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo quam non est cursus imperdiet at ut purus. Morbi tristique turpis at enim rhoncus euismod. Sed consectetur, diam at fringilla pharetra, leo nisi pulvinar libero, at aliquam mauris lectus at tellus. Praesent maximus ut neque a aliquet. Integer scelerisque massa et arcu lobortis sollicitudin. Maecenas in mollis mi.
                             </p>
                             <div class="project__description--links">
-                                <a href="www.github.com/yourlink" target="_blank" class="project__description--link">
+                                <a href="https://www.github.com/yourlink" target="_blank" class="project__description--link">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="www.yourwebsite.com" class="project__description--link">
+                                <a href="https://www.yourwebsite.com" class="project__description--link">
                                     <i class="fab fa-link"></i>
                                 </a>
                             </div>
@@ -141,10 +141,10 @@
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo quam non est cursus imperdiet at ut purus. Morbi tristique turpis at enim rhoncus euismod. Sed consectetur, diam at fringilla pharetra, leo nisi pulvinar libero, at aliquam mauris lectus at tellus. Praesent maximus ut neque a aliquet. Integer scelerisque massa et arcu lobortis sollicitudin. Maecenas in mollis mi.
                             </p>
                             <div class="project__description--links">
-                                <a href="www.github.com/yourlink" target="_blank" class="project__description--link">
+                                <a href="https://www.github.com/yourlink" target="_blank" class="project__description--link">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="www.yourwebsite.com" class="project__description--link">
+                                <a href="https://www.yourwebsite.com" class="project__description--link">
                                     <i class="fab fa-link"></i>
                                 </a>
                             </div>
@@ -163,10 +163,10 @@
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo quam non est cursus imperdiet at ut purus. Morbi tristique turpis at enim rhoncus euismod. Sed consectetur, diam at fringilla pharetra, leo nisi pulvinar libero, at aliquam mauris lectus at tellus. Praesent maximus ut neque a aliquet. Integer scelerisque massa et arcu lobortis sollicitudin. Maecenas in mollis mi.
                             </p>
                             <div class="project__description--links">
-                                <a href="www.github.com/yourlink" target="_blank" class="project__description--link">
+                                <a href="https://www.github.com/yourlink" target="_blank" class="project__description--link">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="www.yourwebsite.com" class="project__description--link">
+                                <a href="https://www.yourwebsite.com" class="project__description--link">
                                     <i class="fab fa-link"></i>
                                 </a>
                             </div>
@@ -177,5 +177,42 @@
         </div>
     </div>
    </section>
+   <footer>
+    <div class="row footer__row">
+        <a href="#" class="footer__anchor">
+            <figure class="footer__logo">
+                <img src="./davidbr4gg.github.io-master/assets/logo.svg" class="footer__logo--img" alt="">
+            </figure>
+            <span class="footer__logo--popper">
+                Top
+                <i class="fas fa-arrow-up"></i>
+            </span>
+        </a>
+        <div class="footer__social--list">
+            <a href="https://google.com" target="_blank" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white
+            " target="_blank">GitHub</a>
+            <a href="https://google.com" target="_blank" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white
+            " target="_blank">LinkedIn</a>
+            <a href="mailto:email@email.com" target="_blank" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white
+            " target="_blank">Email</a>
+            <a href="./davidbr4gg.github.io-master/assets/Example Resume.pdf" target="_blank" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white
+            " target="_blank">Resume</a>
+        </div>
+            <div class="footer__copyright">Copyright © 2026 Melissa Biggs</div>
+    </div>
+   </footer>
+   
 </body>
 </html>
