--- a/E tutorial/index.html
+++ b/E tutorial/index.html
@@ -13,21 +13,21 @@
         <div class="personal__logo">Melissa Biggs</div>
         <ul class="nav__link--list">
             <li class="nav__link">
-                <a href="" class="
+                <a href="#languages" class="
                 nav__link--anchor
                 link__hover-effect
                 link__hover-effect--black
                 ">Languages</a>
             </li>
             <li class="nav__link">
-                <a href="" class="
+                <a href="#projects" class="
                 nav__link--anchor
                 link__hover-effect
                 link__hover-effect--black
-                ">Project</a>
+                ">Projects</a>
             </li>
             <li class="nav__link">
-                <a href="" class="
+                <a href="mailto:mlbiggs21@gmail.com" class="
                 nav__link--anchor
                 nav__link--anchor-primary
                 ">Contact</a>
@@ -57,7 +57,7 @@
                      <a href="" class="about-me__link">
                         <i class="fa-regular fa-envelope"></i>
                     </a>
-                     <a href="" class="about-me__link">
+                     <a href="./davidbr4gg.github.io-master/assets/Example Resume.pdf" target="_blank" class="about-me__link">
                         <i class="fa-solid fa-file"></i>
                     </a>
                 </div>
